--- a/MyGTAByDx/MyGTAByDx.vcxproj
+++ b/MyGTAByDx/MyGTAByDx.vcxproj
@@ -131,6 +131,9 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="ActorComponent.h" />
     <ClInclude Include="D3DApp.h" />
+    <ClInclude Include="DXTrace.h" />
+    <ClInclude Include="DXUtil.h" />
+    <ClInclude Include="GameApp.h" />
     <ClInclude Include="MeshComponent.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="SceneComponent.h" />
@@ -141,6 +144,8 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ActorComponent.cpp" />
     <ClCompile Include="D3DApp.cpp" />
+    <ClCompile Include="DXTrace.cpp" />
+    <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MeshComponent.cpp" />
     <ClCompile Include="Object.cpp" />
