--- a/MyGTAByDx/MyGTAByDx.vcxproj
+++ b/MyGTAByDx/MyGTAByDx.vcxproj
@@ -128,18 +128,22 @@
     <ClInclude Include="ActorComponent.h" />
     <ClInclude Include="BasicShape.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Car.h" />
     <ClInclude Include="D3DApp.h" />
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DXTrace.h" />
     <ClInclude Include="DXUtil.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="LightType.h" />
     <ClInclude Include="MeshComponent.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="SceneComponent.h" />
     <ClInclude Include="PrimitiveComponent.h" />
+    <ClInclude Include="StringProcess.h" />
+    <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="VertexTypes.h" />
     <ClInclude Include="WICTextureLoader.h" />
     <ClInclude Include="World.h" />
@@ -149,16 +153,20 @@
     <ClCompile Include="ActorComponent.cpp" />
     <ClCompile Include="BasicShape.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Car.cpp" />
     <ClCompile Include="D3DApp.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="DXTrace.cpp" />
     <ClCompile Include="DXUtil.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MeshComponent.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="SceneComponent.cpp" />
     <ClCompile Include="PrimitiveComponent.cpp" />
+    <ClCompile Include="StringProcess.cpp" />
+    <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="WICTextureLoader.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
